--- a/MVP-C/Base.lproj/Main.storyboard
+++ b/MVP-C/Base.lproj/Main.storyboard
@@ -75,14 +75,14 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <stackView opaque="NO" contentMode="scaleAspectFit" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="YHb-Xx-Z2f">
-                                <rect key="frame" x="24" y="504" width="380" height="299"/>
+                            <stackView opaque="NO" contentMode="scaleAspectFit" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="YHb-Xx-Z2f">
+                                <rect key="frame" x="24" y="484" width="380" height="358"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="dns-82-Eo9">
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="11" translatesAutoresizingMaskIntoConstraints="NO" id="dns-82-Eo9">
                                         <rect key="frame" x="0.0" y="0.0" width="380" height="142"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VDJ-NV-Qer">
-                                                <rect key="frame" x="0.0" y="0.0" width="380" height="37.333333333333336"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="380" height="40"/>
                                                 <color key="backgroundColor" red="1" green="0.76232387349999997" blue="0.74736287329999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 <fontDescription key="fontDescription" name="MarkerFelt-Thin" family="Marker Felt" pointSize="20"/>
                                                 <state key="normal" title="Información">
@@ -93,7 +93,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gf0-Bz-OyJ">
-                                                <rect key="frame" x="0.0" y="52.333333333333371" width="380" height="37.333333333333343"/>
+                                                <rect key="frame" x="0.0" y="51" width="380" height="40"/>
                                                 <color key="backgroundColor" red="1" green="0.76232387349999997" blue="0.74736287329999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 <fontDescription key="fontDescription" name="MarkerFelt-Thin" family="Marker Felt" pointSize="20"/>
                                                 <state key="normal" title="Tours">
@@ -101,7 +101,7 @@
                                                 </state>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="424-Dc-9Ob">
-                                                <rect key="frame" x="0.0" y="104.66666666666663" width="380" height="37.333333333333343"/>
+                                                <rect key="frame" x="0.0" y="102" width="380" height="40"/>
                                                 <color key="backgroundColor" red="1" green="0.76232387349999997" blue="0.74736287329999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 <fontDescription key="fontDescription" name="MarkerFelt-Thin" family="Marker Felt" pointSize="20"/>
                                                 <state key="normal" title="Gastronomía">
@@ -110,11 +110,11 @@
                                             </button>
                                         </subviews>
                                     </stackView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="cbq-M1-6lL">
-                                        <rect key="frame" x="0.0" y="157" width="380" height="142"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="11" translatesAutoresizingMaskIntoConstraints="NO" id="cbq-M1-6lL">
+                                        <rect key="frame" x="0.0" y="152" width="380" height="142"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rcy-eE-ZHF">
-                                                <rect key="frame" x="0.0" y="0.0" width="380" height="37.333333333333336"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="380" height="40"/>
                                                 <color key="backgroundColor" red="1" green="0.76232387349999997" blue="0.74736287329999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 <fontDescription key="fontDescription" name="MarkerFelt-Thin" family="Marker Felt" pointSize="20"/>
                                                 <state key="normal" title="Transporte">
@@ -122,7 +122,7 @@
                                                 </state>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="y2B-Gu-RKd">
-                                                <rect key="frame" x="0.0" y="52.333333333333371" width="380" height="37.333333333333343"/>
+                                                <rect key="frame" x="0.0" y="51" width="380" height="40"/>
                                                 <color key="backgroundColor" red="1" green="0.76232387349999997" blue="0.74736287329999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 <fontDescription key="fontDescription" name="MarkerFelt-Thin" family="Marker Felt" pointSize="20"/>
                                                 <state key="normal" title="Hoteles">
@@ -130,13 +130,47 @@
                                                 </state>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ehi-2Z-jrH">
-                                                <rect key="frame" x="0.0" y="104.66666666666663" width="380" height="37.333333333333343"/>
+                                                <rect key="frame" x="0.0" y="102" width="380" height="40"/>
                                                 <color key="backgroundColor" red="1" green="0.76232387349999997" blue="0.74736287329999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 <fontDescription key="fontDescription" name="MarkerFelt-Thin" family="Marker Felt" pointSize="20"/>
                                                 <state key="normal" title="Tiendas">
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
                                             </button>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" alignment="lastBaseline" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="JJC-V4-xhc">
+                                        <rect key="frame" x="0.0" y="304" width="380" height="22"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="info@email.com" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JtL-c0-Imt">
+                                                <rect key="frame" x="0.0" y="0.0" width="131.33333333333334" height="22"/>
+                                                <fontDescription key="fontDescription" name="MarkerFelt-Thin" family="Marker Felt" pointSize="20"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="+34675895098" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zdO-Eq-Cm6">
+                                                <rect key="frame" x="245.66666666666669" y="0.0" width="134.33333333333331" height="22"/>
+                                                <fontDescription key="fontDescription" name="MarkerFelt-Thin" family="Marker Felt" pointSize="20"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" alignment="lastBaseline" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="E4Z-hN-4Ha">
+                                        <rect key="frame" x="0.0" y="336" width="380" height="22"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="@insta" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rc9-CS-Ls6">
+                                                <rect key="frame" x="0.0" y="0.0" width="60.333333333333336" height="22"/>
+                                                <fontDescription key="fontDescription" name="MarkerFelt-Thin" family="Marker Felt" pointSize="20"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="@facebook" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gui-rb-XBO">
+                                                <rect key="frame" x="289.66666666666669" y="0.0" width="90.333333333333314" height="22"/>
+                                                <fontDescription key="fontDescription" name="MarkerFelt-Thin" family="Marker Felt" pointSize="20"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
                                         </subviews>
                                     </stackView>
                                 </subviews>
@@ -157,7 +191,7 @@
                             <constraint firstItem="T4S-ue-LNT" firstAttribute="centerX" secondItem="ff9-A0-gbS" secondAttribute="centerX" id="VuG-sR-Dw3"/>
                             <constraint firstItem="6O5-4s-uJL" firstAttribute="top" secondItem="ff9-A0-gbS" secondAttribute="top" constant="19" id="aYv-hT-Kyn"/>
                             <constraint firstItem="T4S-ue-LNT" firstAttribute="top" secondItem="6O5-4s-uJL" secondAttribute="bottom" constant="16" id="fw0-Ku-3FS"/>
-                            <constraint firstItem="YHb-Xx-Z2f" firstAttribute="top" secondItem="T4S-ue-LNT" secondAttribute="bottom" constant="30" id="fw9-Lf-jvt"/>
+                            <constraint firstItem="YHb-Xx-Z2f" firstAttribute="top" secondItem="T4S-ue-LNT" secondAttribute="bottom" constant="10" id="fw9-Lf-jvt"/>
                             <constraint firstItem="dns-82-Eo9" firstAttribute="height" secondItem="Xsa-xS-JZe" secondAttribute="height" multiplier="0.153348" id="oGm-IM-850"/>
                             <constraint firstItem="T4S-ue-LNT" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="ff9-A0-gbS" secondAttribute="leading" constant="24" id="tNe-ct-rVD"/>
                             <constraint firstItem="6O5-4s-uJL" firstAttribute="leading" secondItem="ff9-A0-gbS" secondAttribute="leading" constant="20" id="yrA-8c-oyl"/>
