--- a/MVP-C/InformationDetailView/InformationDetailView.storyboard
+++ b/MVP-C/InformationDetailView/InformationDetailView.storyboard
@@ -34,18 +34,27 @@
                                             <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1nW-2T-2sN">
-                                                    <rect key="frame" x="8" y="117" width="142" height="33"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1nW-2T-2sN">
+                                                    <rect key="frame" x="55.666666666666657" y="130.33333333333334" width="39" height="19.666666666666657"/>
                                                     <fontDescription key="fontDescription" name="MarkerFelt-Thin" family="Marker Felt" pointSize="18"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cDv-lM-2NC">
-                                                    <rect key="frame" x="4" y="8" width="142" height="109"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cDv-lM-2NC">
+                                                    <rect key="frame" x="4" y="7.9999999999999929" width="142" height="117.33333333333331"/>
                                                 </imageView>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="1nW-2T-2sN" secondAttribute="bottom" id="3lN-BD-b9Q"/>
+                                                <constraint firstItem="1nW-2T-2sN" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Lcm-fV-GKQ" secondAttribute="leading" constant="8" id="AQT-6S-1qk"/>
+                                                <constraint firstItem="1nW-2T-2sN" firstAttribute="top" secondItem="cDv-lM-2NC" secondAttribute="bottom" constant="5" id="AxE-sW-Be8"/>
+                                                <constraint firstAttribute="trailing" secondItem="cDv-lM-2NC" secondAttribute="trailing" constant="4" id="KcS-YJ-w8n"/>
+                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="1nW-2T-2sN" secondAttribute="trailing" constant="8" id="Xvo-Xo-wds"/>
+                                                <constraint firstItem="cDv-lM-2NC" firstAttribute="centerX" secondItem="Lcm-fV-GKQ" secondAttribute="centerX" id="ZoJ-ZL-pPM"/>
+                                                <constraint firstItem="1nW-2T-2sN" firstAttribute="centerX" secondItem="Lcm-fV-GKQ" secondAttribute="centerX" id="l6r-q1-Orp"/>
+                                                <constraint firstItem="cDv-lM-2NC" firstAttribute="leading" secondItem="Lcm-fV-GKQ" secondAttribute="leading" constant="4" id="oyg-Ul-ikb"/>
+                                                <constraint firstItem="cDv-lM-2NC" firstAttribute="top" secondItem="Lcm-fV-GKQ" secondAttribute="top" constant="8" id="yTA-lP-F2m"/>
+                                            </constraints>
                                         </collectionViewCellContentView>
                                         <connections>
                                             <outlet property="imageView" destination="cDv-lM-2NC" id="7ke-hb-oON"/>
