--- a/MVP-C/TransportDetailView/TransportDetailView.storyboard
+++ b/MVP-C/TransportDetailView/TransportDetailView.storyboard
@@ -5,6 +5,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -15,13 +16,78 @@
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="LXn-zW-gkd">
+                                <rect key="frame" x="20" y="99" width="374" height="763"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="bWx-9o-VEZ">
+                                    <size key="itemSize" width="150" height="150"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cell" id="G07-ON-ptM" customClass="TransportCollectionViewCell" customModule="MVP_C" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="9Bd-cN-l9S">
+                                            <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="PzO-0m-uuE">
+                                                    <rect key="frame" x="0.0" y="0.0" width="150" height="125"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vr5-Bp-Sub">
+                                                    <rect key="frame" x="55.5" y="130" width="39" height="20"/>
+                                                    <fontDescription key="fontDescription" name="MarkerFelt-Thin" family="Marker Felt" pointSize="18"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="vr5-Bp-Sub" firstAttribute="centerX" secondItem="9Bd-cN-l9S" secondAttribute="centerX" id="HOA-WY-lMl"/>
+                                                <constraint firstItem="vr5-Bp-Sub" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="9Bd-cN-l9S" secondAttribute="leading" id="Kb9-0O-ZJy"/>
+                                                <constraint firstAttribute="trailing" secondItem="PzO-0m-uuE" secondAttribute="trailing" id="PDm-Uh-o5i"/>
+                                                <constraint firstItem="vr5-Bp-Sub" firstAttribute="top" secondItem="PzO-0m-uuE" secondAttribute="bottom" constant="5" id="b0H-fc-rxY"/>
+                                                <constraint firstItem="PzO-0m-uuE" firstAttribute="top" secondItem="9Bd-cN-l9S" secondAttribute="top" id="dfk-UF-3S4"/>
+                                                <constraint firstItem="PzO-0m-uuE" firstAttribute="leading" secondItem="9Bd-cN-l9S" secondAttribute="leading" id="eYa-Xw-8C7"/>
+                                                <constraint firstAttribute="bottom" secondItem="vr5-Bp-Sub" secondAttribute="bottom" id="fbg-pX-PZE"/>
+                                                <constraint firstItem="PzO-0m-uuE" firstAttribute="centerX" secondItem="9Bd-cN-l9S" secondAttribute="centerX" id="lWU-0V-XOJ"/>
+                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="vr5-Bp-Sub" secondAttribute="trailing" constant="20" id="vu4-Rw-Edr"/>
+                                            </constraints>
+                                        </collectionViewCellContentView>
+                                        <connections>
+                                            <outlet property="imageView" destination="PzO-0m-uuE" id="W7i-XY-s6V"/>
+                                            <outlet property="lblImage" destination="vr5-Bp-Sub" id="xSP-4p-28o"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Red de transporte público" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HNC-4g-f5T">
+                                <rect key="frame" x="104.5" y="53" width="205" height="21"/>
+                                <fontDescription key="fontDescription" name="MarkerFelt-Thin" family="Marker Felt" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="LXn-zW-gkd" secondAttribute="trailing" constant="20" id="1Bb-8U-hhX"/>
+                            <constraint firstItem="LXn-zW-gkd" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="55" id="3Kj-sh-dGF"/>
+                            <constraint firstItem="HNC-4g-f5T" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="9" id="4d1-4C-se1"/>
+                            <constraint firstItem="LXn-zW-gkd" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="AB8-rD-8yw"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="HNC-4g-f5T" secondAttribute="trailing" constant="20" id="E0F-pd-apS"/>
+                            <constraint firstItem="HNC-4g-f5T" firstAttribute="centerX" secondItem="vDu-zF-Fre" secondAttribute="centerX" id="O7r-mE-vLw"/>
+                            <constraint firstItem="LXn-zW-gkd" firstAttribute="top" secondItem="HNC-4g-f5T" secondAttribute="bottom" constant="25" id="a2I-xl-ny8"/>
+                            <constraint firstItem="HNC-4g-f5T" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="hCn-cs-DcC"/>
+                            <constraint firstItem="LXn-zW-gkd" firstAttribute="bottom" secondItem="vDu-zF-Fre" secondAttribute="bottom" id="kTw-67-9Dr"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="106" y="123"/>
+            <point key="canvasLocation" x="105.79710144927537" y="122.54464285714285"/>
         </scene>
     </scenes>
     <resources>
