--- a/MVP-C/TransportDetailView/TransportDetailView.storyboard
+++ b/MVP-C/TransportDetailView/TransportDetailView.storyboard
@@ -12,7 +12,7 @@
         <!--Transport View Controller-->
         <scene sceneID="s0d-6b-0kx">
             <objects>
-                <viewController storyboardIdentifier="TransportViewController" id="Y6W-OH-hqX" customClass="TransportViewController" customModule="MVP_C" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="TransportViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Y6W-OH-hqX" customClass="TransportViewController" customModule="MVP_C" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -27,15 +27,15 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cell" id="G07-ON-ptM" customClass="TransportCollectionViewCell" customModule="MVP_C" customModuleProvider="target">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="transportCell" id="G07-ON-ptM" customClass="TransportCollectionViewCell" customModule="MVP_C" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="9Bd-cN-l9S">
                                             <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="PzO-0m-uuE">
-                                                    <rect key="frame" x="0.0" y="0.0" width="150" height="125"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="PzO-0m-uuE">
+                                                    <rect key="frame" x="4" y="8" width="142" height="117"/>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vr5-Bp-Sub">
                                                     <rect key="frame" x="55.5" y="130" width="39" height="20"/>
@@ -45,20 +45,19 @@
                                                 </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="vr5-Bp-Sub" firstAttribute="centerX" secondItem="9Bd-cN-l9S" secondAttribute="centerX" id="HOA-WY-lMl"/>
-                                                <constraint firstItem="vr5-Bp-Sub" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="9Bd-cN-l9S" secondAttribute="leading" id="Kb9-0O-ZJy"/>
-                                                <constraint firstAttribute="trailing" secondItem="PzO-0m-uuE" secondAttribute="trailing" id="PDm-Uh-o5i"/>
-                                                <constraint firstItem="vr5-Bp-Sub" firstAttribute="top" secondItem="PzO-0m-uuE" secondAttribute="bottom" constant="5" id="b0H-fc-rxY"/>
-                                                <constraint firstItem="PzO-0m-uuE" firstAttribute="top" secondItem="9Bd-cN-l9S" secondAttribute="top" id="dfk-UF-3S4"/>
-                                                <constraint firstItem="PzO-0m-uuE" firstAttribute="leading" secondItem="9Bd-cN-l9S" secondAttribute="leading" id="eYa-Xw-8C7"/>
-                                                <constraint firstAttribute="bottom" secondItem="vr5-Bp-Sub" secondAttribute="bottom" id="fbg-pX-PZE"/>
-                                                <constraint firstItem="PzO-0m-uuE" firstAttribute="centerX" secondItem="9Bd-cN-l9S" secondAttribute="centerX" id="lWU-0V-XOJ"/>
-                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="vr5-Bp-Sub" secondAttribute="trailing" constant="20" id="vu4-Rw-Edr"/>
+                                                <constraint firstItem="vr5-Bp-Sub" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="9Bd-cN-l9S" secondAttribute="leading" constant="8" id="1hG-3A-qIV"/>
+                                                <constraint firstAttribute="bottom" secondItem="vr5-Bp-Sub" secondAttribute="bottom" id="HGt-L7-go8"/>
+                                                <constraint firstItem="PzO-0m-uuE" firstAttribute="leading" secondItem="9Bd-cN-l9S" secondAttribute="leading" constant="4" id="Tg9-Tz-YrP"/>
+                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="vr5-Bp-Sub" secondAttribute="trailing" constant="8" id="ZI7-d9-o51"/>
+                                                <constraint firstItem="PzO-0m-uuE" firstAttribute="top" secondItem="9Bd-cN-l9S" secondAttribute="topMargin" id="k2n-g1-a9S"/>
+                                                <constraint firstItem="vr5-Bp-Sub" firstAttribute="centerX" secondItem="9Bd-cN-l9S" secondAttribute="centerX" id="pNw-3H-HKT"/>
+                                                <constraint firstItem="vr5-Bp-Sub" firstAttribute="top" secondItem="PzO-0m-uuE" secondAttribute="bottom" constant="5" id="s7y-9w-bSh"/>
+                                                <constraint firstItem="PzO-0m-uuE" firstAttribute="centerX" secondItem="vr5-Bp-Sub" secondAttribute="centerX" id="sNO-DQ-XAS"/>
                                             </constraints>
                                         </collectionViewCellContentView>
                                         <connections>
-                                            <outlet property="imageView" destination="PzO-0m-uuE" id="W7i-XY-s6V"/>
-                                            <outlet property="lblImage" destination="vr5-Bp-Sub" id="xSP-4p-28o"/>
+                                            <outlet property="imageTransport" destination="PzO-0m-uuE" id="ffQ-O6-LbS"/>
+                                            <outlet property="lblTransport" destination="vr5-Bp-Sub" id="bDM-Rf-uzU"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
@@ -84,6 +83,9 @@
                             <constraint firstItem="LXn-zW-gkd" firstAttribute="bottom" secondItem="vDu-zF-Fre" secondAttribute="bottom" id="kTw-67-9Dr"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="transportCollection" destination="LXn-zW-gkd" id="DxN-3F-8Xc"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
