--- a/MVP-C/ShopsDetailView/ShopsViewController.xib
+++ b/MVP-C/ShopsDetailView/ShopsViewController.xib
@@ -10,6 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ShopsViewController" customModule="MVP_C" customModuleProvider="target">
             <connections>
+                <outlet property="tableView" destination="MOS-hO-ViY" id="wLw-AI-27Z"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
